# snake

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  windows.yml
assets/fonts/: PLACEHOLDER.txt  README.md
assets/scripts/: config.lua  rules.lua
assets/sounds/: PLACEHOLDER.txt  README.md
assets/sprites/: PLACEHOLDER.txt  README.md
cmake/: CopyRuntimeDeps.cmake
docs/: DEMO_CHECKLIST.md  _codex_test.md  build_run.md  lua_api.md  spec.md  troubleshooting_audio.md  troubleshooting_ui_text.md
profiles/: demo_fast_start.yaml  demo_low_risk.yaml  demo_max_income.yaml
src/: main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h  SFX.cpp  SFX.h
src/core/: App.cpp  App.h  Input.cpp  Input.h  Time.cpp  Time.h
src/game/: Board.cpp  Board.h  Effects.cpp  Effects.h  Game.cpp  Game.h  ScoreSystem.cpp  ScoreSystem.h  Snake.cpp  Snake.h  Spawner.cpp  Spawner.h  StateMachine.cpp  StateMachine.h  Types.h
src/io/: AppData.cpp  AppData.h  Bootstrap.cpp  Bootstrap.h  Config.cpp  Config.h  Highscores.cpp  Highscores.h  Paths.cpp  Paths.h
src/lua/: Bindings.cpp  Bindings.h  LuaRuntime.cpp  LuaRuntime.h
src/money_map/: __init__.py
src/money_map/app/: __init__.py  cli.py
src/money_map/core/: __init__.py  models.py  profile_io.py
src/money_map/render/: export.py
src/money_map/ui/: __init__.py  app.py  state.py
src/money_map/ui/views/: data_status.py  export.py  plan.py  profile.py  recommendations.py
src/render/: Animation.cpp  Animation.h  Effects.cpp  Effects.h  Font.cpp  Font.h  Renderer.cpp  Renderer.h  SpriteAtlas.cpp  SpriteAtlas.h  TextRenderer.cpp  TextRenderer.h  UIRenderer.cpp  UIRenderer.h
tests/: test_demo_profiles_smoke.py  test_economics_snapshot.py  test_feasibility_engine.py  test_perf_smoke.py  test_plan_actionability.py  test_plan_includes_compliance.py  test_recommend_objectives.py  test_rulepack_staleness.py  test_rules_legal_gate.py  test_ui_import.py  test_validate_data.py  utils.py
